[Finishes #181192805] Added Kafka producer & consumer, create company, seed channels and finish push
